# databricks-resource-monitor

./: .gitignore  CLAUDE.md  LICENSE  README.md  databricks.yml  hello.py  pyproject.toml  requirements.txt  served_entities_schema.csv  setup.py
config/whitelists/: apps.json  model_endpoints.json
resources/: custom_monitors.yml.example
src/: main.py
src/databricks_resource_monitor/: __main__.py
src/databricks_resource_monitor/config/whitelists/: __init__.py  apps.json  model_endpoints.json
src/databricks_resource_monitor/handlers/: apps.py  base.py
src/databricks_resource_monitor/utils/: config.py
src/factories/: resource_factory.py
src/handlers/: base.py  model_endpoints.py
src/utils/: config.py
